--- a/client/src/translate/langs/fa.json
+++ b/client/src/translate/langs/fa.json
@@ -20,6 +20,10 @@
       "save": {
         "title": "اطلاعات ذخیره شدند",
         "msg": "سرعت فراخوانی اطلاعات بالا رفت"
+      },
+      "load": {
+        "title": "در حال ترجمه ی اطلاعات...",
+        "msg": "لطفا شکیبا باشید"
       }
     },
     "categories": {
