--- a/client/src/translate/langs/fa.json
+++ b/client/src/translate/langs/fa.json
@@ -81,5 +81,42 @@
     "period": "دوره",
     "group": "گروه",
     "electron-configuration": "طرز قرار گیری الکترون ها"
+  },
+  "home": {
+    "effect": "با الن دنیای اتم ها رو بهتر بشناس:",
+    "why": "چرا فقط الن ؟",
+    "list": {
+      "translate": {
+        "title": "کاملا فارسی",
+        "msg": "اطلاعات دقیق اما فارسی چیزی که کم پیدا میشه"
+      },
+      "fast": {
+        "title": "خیلی سریع",
+        "msg": "فقط لازمه یک بار برای لود شدنش صبر کنی"
+      },
+      "cute": {
+        "title": "جذاب",
+        "msg": "ظاهر فوق العاده برای یادگیری با انگیزه ی بیشتر"
+      },
+      "responsive": {
+        "title": "واکنش گرا",
+        "msg": "همه جا میتونی ازش استفاده کنی"
+      },
+      "free": {
+        "title": "رایگان",
+        "msg": "چرا داری به دشمنات پول میدی؟"
+      },
+      "opensource": {
+        "title": "اپن سورس",
+        "msg": "از api الن تو اپلیکیشن بعدیت استفاده کن"
+      }
+    },
+    "join": "همین حالا شروع کن و دنیای اتم ها رو بشناس",
+    "btn-join": "بزن بریم",
+    "develope": "برنامه نویسی ؟",
+    "span-develope": "اینجا برای تو هم جا هست، می‌تونی اپلیکیشنتو توسعه بدی",
+    "document": "یه سری به دایکیومنت api بزن",
+    "whereis": "اینجا کجاست؟",
+    "about": "الن یک پروژه ی اپن-سورس کاملا ایرانی، پویا و واکنش گراست که برای مردمهمه جای دنیا طراحی شده و تمام آدما میتونن باهاش دنیای اتم های رو یادبگیرن این سایت دارای یک api خوب هستش که باهاش میتونین اطلاعات رو بهتمام زبان ها به کمک گوگل ترنسلیت ترجمه کنید و توی کار هاتون ازشاستفاده کنین.\nاین پروژه با expressJS و react و چند تا کتابخونه ی دیگه طراحی شده و ازیک دیتابیس NoSQL خیلی خوب برای ذخیره ی اطلاعات استفاده میکنه، همچنینبا بارگذاری اولیه اطلاعات کش میشن و شما دیگه نیاز نیست برای ترجمهشدنشون صبر کنین.\nهمین حالا وقتتون رو با سایت های خارجی هدر ندین و به وسیله ی لینک بالااز اطلاعات این سایت استفاده کنین."
   }
 }
