--- a/client/src/translate/langs/fa.json
+++ b/client/src/translate/langs/fa.json
@@ -118,5 +118,21 @@
     "document": "یه سری به دایکیومنت api بزن",
     "whereis": "اینجا کجاست؟",
     "about": "الن یک پروژه ی اپن-سورس کاملا ایرانی، پویا و واکنش گراست که برای مردمهمه جای دنیا طراحی شده و تمام آدما میتونن باهاش دنیای اتم های رو یادبگیرن این سایت دارای یک api خوب هستش که باهاش میتونین اطلاعات رو بهتمام زبان ها به کمک گوگل ترنسلیت ترجمه کنید و توی کار هاتون ازشاستفاده کنین.\nاین پروژه با expressJS و react و چند تا کتابخونه ی دیگه طراحی شده و ازیک دیتابیس NoSQL خیلی خوب برای ذخیره ی اطلاعات استفاده میکنه، همچنینبا بارگذاری اولیه اطلاعات کش میشن و شما دیگه نیاز نیست برای ترجمهشدنشون صبر کنین.\nهمین حالا وقتتون رو با سایت های خارجی هدر ندین و به وسیله ی لینک بالااز اطلاعات این سایت استفاده کنین."
+  },
+  "config": {
+    "home": "خانه",
+    "info": "اطلاعات درباره ی اتم",
+    "search": "جستجو",
+    "table": "جدول تناوبی",
+    "error": "خطا",
+    "TableResult": "جواب جستجو",
+    "descriptions": {
+      "home": "چیزی درباره ی اتم ها میدونی؟\nبا دنیای اتمی الن میتونی اطلاعات تازه تری کسب کنی",
+      "search": "شما میتوانی طبق هر خصوصیتی اعم از جرم، عدد اتمی، نام، نام مکتشف، دسته بند یا... جستجو کنید",
+      "table": "یک جدول تناوبی فوق العاده ی رنگی که میتونین با کلیک روی هر اتم اطلاعاتی درباره ی اون کسب کنید",
+      "TableResult": "دنبال اتم خاصی میگری؟\nاینجا میتونی پیداش کنی",
+      "info": "کلی اطلاعات درباره ی اتم %NAME% اینجا موجوده کدومشو میخوای؟",
+      "error": "وای، اینجا یه ارور هست، نمیتونیم کاری کنیم..."
+    }
   }
 }
