--- a/client/src/translate/langs/fa.json
+++ b/client/src/translate/langs/fa.json
@@ -63,7 +63,8 @@
     "back-table": "بازگشت به جدول",
     "page": "صفحه یافت نشد",
     "or": "یا",
-    "search": "جستجو کنید"
+    "search": "جستجو کنید",
+    "406": "این صفحه در دست ساخت می‌باشد"
   },
   "info": {
     "wikipedia": "در ویکی پدیا",
