--- a/client/src/translate/langs/fa.json
+++ b/client/src/translate/langs/fa.json
@@ -10,7 +10,8 @@
       "github": "گیت‌هاب پروژه",
       "refresh": "تازه سازی اطلاعات",
       "theme": "تغییر رنگ",
-      "lang": "تغییر زبان"
+      "lang": "تغییر زبان",
+      "share":"این صفحه را هم رسانی کنید"
     }
   },
   "table": {
