fix spelling problem

--- a/client/src/translate/langs/fa.json
+++ b/client/src/translate/langs/fa.json
@@ -38,7 +38,7 @@
       "unknown": "ناشناخته",
       "noble-gas": "گاز های نجیب",
       "alkali-metal": "فلزات قلیایی",
-      "alkaline-earth-metal": "لزات قلیایی خاکی"
+      "alkaline-earth-metal": "فلزات قلیایی خاکی"
     },
     "phase": {
       "solid": "جامد",
