--- a/client/src/translate/langs/fa.json
+++ b/client/src/translate/langs/fa.json
@@ -11,22 +11,11 @@
       "refresh": "تازه سازی اطلاعات",
       "theme": "تغییر رنگ",
       "lang": "تغییر زبان",
-      "share":"این صفحه را هم رسانی کنید"
+      "share": "این صفحه را هم رسانی کنید"
     }
   },
   "table": {
     "result": "جواب جستجو",
-    "messages": {
-      "refresh": "اطلاعات با موفقیت بروز شدند",
-      "save": {
-        "title": "اطلاعات ذخیره شدند",
-        "msg": "سرعت فراخوانی اطلاعات بالا رفت"
-      },
-      "load": {
-        "title": "در حال ترجمه ی اطلاعات...",
-        "msg": "لطفا شکیبا باشید"
-      }
-    },
     "categories": {
       "metal": "فلزات",
       "nometal": "نا فلزات",
@@ -64,8 +53,7 @@
     "back-table": "بازگشت به جدول",
     "page": "صفحه یافت نشد",
     "or": "یا",
-    "search": "جستجو کنید",
-    "406": "این صفحه در دست ساخت می‌باشد"
+    "search": "جستجو کنید"
   },
   "info": {
     "wikipedia": "در ویکی پدیا",
