--- a/client/src/translate/langs/fa.json
+++ b/client/src/translate/langs/fa.json
@@ -6,6 +6,7 @@
     "home": "خانه",
     "table": "جدول",
     "search": "جستجو",
+    "document":"مستندات",
     "icons": {
       "github": "گیت‌هاب پروژه",
       "refresh": "تازه سازی اطلاعات",
@@ -73,7 +74,7 @@
     "electron-configuration": "طرز قرار گیری الکترون ها",
     "close": "بستن",
     "read": "تلفظ",
-    "image":"تصویری از این اتم"
+    "image": "تصویری از این اتم"
   },
   "home": {
     "effect": "با الن دنیای اتم ها رو بهتر بشناس:",
@@ -119,12 +120,14 @@
     "table": "جدول تناوبی",
     "error": "خطا",
     "TableResult": "جواب جستجو",
+    "document": "مستندات",
     "descriptions": {
       "home": "چیزی درباره ی اتم ها میدونی؟\nبا دنیای اتمی الن میتونی اطلاعات تازه تری کسب کنی",
       "search": "شما میتوانی طبق هر خصوصیتی اعم از جرم، عدد اتمی، نام، نام مکتشف، دسته بند یا... جستجو کنید",
       "table": "یک جدول تناوبی فوق العاده ی رنگی که میتونین با کلیک روی هر اتم اطلاعاتی درباره ی اون کسب کنید",
       "TableResult": "دنبال اتم خاصی میگری؟\nاینجا میتونی پیداش کنی",
       "info": "کلی اطلاعات درباره ی اتم %NAME% اینجا موجوده کدومشو میخوای؟",
+      "document": "مستندات api دنیای اتمی الن",
       "error": "وای، اینجا یه ارور هست، نمیتونیم کاری کنیم..."
     }
   }
