--- a/client/src/translate/langs/fa.json
+++ b/client/src/translate/langs/fa.json
@@ -127,7 +127,7 @@
       "search": "شما میتوانی طبق هر خصوصیتی اعم از جرم، عدد اتمی، نام، نام مکتشف، دسته بند یا... جستجو کنید",
       "table": "یک جدول تناوبی فوق العاده ی رنگی که میتونین با کلیک روی هر اتم اطلاعاتی درباره ی اون کسب کنید",
       "TableResult": "دنبال اتم خاصی میگری؟\nاینجا میتونی پیداش کنی",
-      "info": "کلی اطلاعات درباره ی اتم {name} اینجا موجوده کدومشو میخوای؟",
+      "info": "کلی اطلاعات درباره ی اتم {{name}} اینجا موجوده کدومشو میخوای؟",
       "document": "مستندات api دنیای اتمی الن",
       "error": "وای، اینجا یه ارور هست، نمیتونیم کاری کنیم..."
     }
