use context in document

--- a/client/src/translate/langs/fa.json
+++ b/client/src/translate/langs/fa.json
@@ -128,7 +128,7 @@
       "table": "یک جدول تناوبی فوق العاده ی رنگی که میتونین با کلیک روی هر اتم اطلاعاتی درباره ی اون کسب کنید",
       "TableResult": "دنبال اتم خاصی میگری؟\nاینجا میتونی پیداش کنی",
       "info": "کلی اطلاعات درباره ی اتم {{name}} اینجا موجوده کدومشو میخوای؟",
-      "document": "مستندات api دنیای اتمی الن",
+      "document": "مستندات api دنیای اتمی الن شما در {{action}} هستید",
       "error": "وای، اینجا یه ارور هست، نمیتونیم کاری کنیم..."
     }
   }
