--- a/client/src/translate/langs/en.json
+++ b/client/src/translate/langs/en.json
@@ -128,7 +128,7 @@
       "table": "This is a fantastic periodic table you see atoms with colorful style and you can click to see the details",
       "TableResult": "You look for a special atom? you can find it here",
       "info": "Information about {{name}} atom is visible in here:",
-      "document": "document of Elen Atomic World api, you're in",
+      "document": "document of Elen Atomic World api, you're in {{action}}",
       "error": "oh no, i get an error, we can't get anything"
     }
   }
