--- a/client/src/translate/langs/pages/fa.json
+++ b/client/src/translate/langs/pages/fa.json
@@ -10,7 +10,7 @@
   "init/": {
     "name": "آماده سازی",
     "title": "آماده سازی برای شروع",
-    "text": "اگه شما میتوانید این صفحه را ببینید قطعا شما این پروژه را از گیت‌هاب clone کرده و پکیج ها و الزامات آن را نصب کرده اید در این صورت شما میتوانید از این پروژه و api به راحتی استفاده کنید.\nبه یاد داشته باشید که این صفحه بر رو پورت 3000 و api بر روی پورت 4000 می‌باشد.\n\nاما اگر این صفحه را نمی‌بینید و به روش های دیگر به این متن دسترسی دارید لازم است تا طبق مراحل پیش رفته و الزامات را نصب کنید و سپس با yarn start در شاخه ی اصلی و پوشه ی client پروژه را شروع کنید."
+    "text": "لازم است که این پروژه را از طریق گیت‌هاب در رایانه ی شخصیه خود clone کنید و سپس الزامات را نصب کرده و با انجام دستور yarn start در هر دو پوشه ی root (/) و client سایت را در سیستمان اجرا کنید.\nحالا مراحل بعدی را انجام دهید."
   },
   "get/all": {
     "name": "بدست آوردن تمام اتم ها",
