--- a/client/src/translate/langs/en.json
+++ b/client/src/translate/langs/en.json
@@ -17,6 +17,7 @@
   },
   "table": {
     "result": "search result",
+    "redirect": "redirecting to destination...",
     "categories": {
       "metal": "metal",
       "nometal": "no metal",
