--- a/client/src/translate/langs/en.json
+++ b/client/src/translate/langs/en.json
@@ -7,6 +7,7 @@
     "table": "table",
     "search": "search",
     "document": "document",
+    "panel": "admin panel",
     "icons": {
       "github": "github",
       "theme": "change color theme",
