--- a/client/src/translate/langs/fa.json
+++ b/client/src/translate/langs/fa.json
@@ -7,6 +7,7 @@
     "table": "جدول",
     "search": "جستجو",
     "document": "مستندات",
+    "panel": "حساب کاربری",
     "icons": {
       "github": "گیت‌هاب پروژه",
       "theme": "تغییر رنگ",
