--- a/client/src/translate/langs/en.json
+++ b/client/src/translate/langs/en.json
@@ -55,7 +55,8 @@
     "back-table": "back to table",
     "page": "page not found",
     "or": "or",
-    "search": "search it"
+    "search": "search it",
+    "refresh": "refresh the page"
   },
   "info": {
     "refresh": "refresh the datas",
