--- a/client/src/translate/langs/fa.json
+++ b/client/src/translate/langs/fa.json
@@ -55,7 +55,8 @@
     "back-table": "بازگشت به جدول",
     "page": "صفحه یافت نشد",
     "or": "یا",
-    "search": "جستجو کنید"
+    "search": "جستجو کنید",
+    "refresh": "تازه سازی صفحه"
   },
   "info": {
     "refresh": "تازه سازی اطلاعات",
